# platformer

./: Cargo.toml  index.html
assets/sprites/: tileset.aseprite
src/: entity.rs  main.rs  tile.rs  world.rs  world.txt
